base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert
  labels:
    istio-injection: enabled
    app.kubernetes.io/part-of: arca-suite
    app.kubernetes.io/name: cert
