base/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: cert-mtls
  namespace: cert
spec:
  mtls:
    mode: STRICT
