base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cert
  namespace: cert
  labels:
    app.kubernetes.io/part-of: arca-suite
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cert
  ports:
    - name: http
      port: 80
      targetPort: 8093
